src/test/ui/marker_trait_attr/marker-attribute-with-values.stderr
error: attribute must be of the form `#[marker]`
  --> $DIR/marker-attribute-with-values.rs:4:1
   |
LL | #[marker(always)]
   | ^^^^^^^^^^^^^^^^^

error: attribute must be of the form `#[marker]`
  --> $DIR/marker-attribute-with-values.rs:8:1
   |
LL | #[marker("never")]
   | ^^^^^^^^^^^^^^^^^^

error: expected unsuffixed literal or identifier, found value
  --> $DIR/marker-attribute-with-values.rs:12:10
   |
LL | #[marker(key = value)]
   |          ^^^

error: aborting due to 3 previous errors

